--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
-  "buildCommand": "prisma generate && next build"
+  "installCommand": "npm install --legacy-peer-deps && npx prisma generate",
+  "buildCommand": "npm run build"
 }
