--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,3 @@
 {
-  "installCommand": "npm install --legacy-peer-deps && npx prisma generate",
-  "buildCommand": "npm run build"
+  "installCommand": "npm install --legacy-peer-deps && npx prisma generate"
 }
