--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-  "installCommand": "npm install --legacy-peer-deps && npx prisma generate"
+  "installCommand": "npm install --legacy-peer-deps"
 }
